--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -25,7 +25,7 @@ video,
 iframe {
 	max-width: 100%;
 	width: auto;
-	height: auto !important;
+	height: auto;
 	border-width: 0;
 	vertical-align: middle;
 }
@@ -64,7 +64,18 @@ a:focus {
 	color: #000;
 }
 
+h1 {
+	font-size: 5rem;
+}
+
 p {
 	max-width: 30em;
 	margin: 0 auto;
+	font-size: 1.6rem;
+	color: #575757;
+}
+
+#site-logo {
+	width: auto;
+	height: 4rem;
 }
