--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -47,12 +47,12 @@ html {
 	font-size: 100%;
 }
 
-
 body {
 	font-family: sans-serif;
 	padding: 10%;
 	text-align: center;
 	line-height: 1.5em;
+	color: rgb(50, 50, 50);
 }
 
 a {
@@ -72,10 +72,21 @@ p {
 	max-width: 30em;
 	margin: 0 auto;
 	font-size: 1.6rem;
-	color: #575757;
 }
 
-#site-logo {
+#site-logo svg,
+#site-logo img {
 	width: auto;
-	height: 4rem;
+	height: 5rem;
+}
+
+#site-logo svg path {
+	fill: rgb(50, 50, 50);
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		color: #fff;
+		background-color: #000;
+	}
 }
