Add layer option for project

--- a/site/plugins/panel-module/index.css
+++ b/site/plugins/panel-module/index.css
@@ -1,3 +1,4 @@
+.k-pages-field .k-list-item .k-list-item-text small,
 .k-pages-section .k-list-item .k-list-item-text small {
 	color: #000000;
 	background-color: #f1f1f1;
