--- a/content/1_projects/1_essay-on-the-modifications-of-clouds/document.css
+++ b/content/1_projects/1_essay-on-the-modifications-of-clouds/document.css
@@ -36,18 +36,8 @@ figcaption {
   font-style: normal;
 	font-weight: 400;
   src: local(''),
-       url('../fonts/Vollkorn-Regular.woff2') format('woff2'), 
-       url('../fonts/Vollkorn-Regular.woff') format('woff'); 
-}
-
-/* vollkorn-500 - latin */
-@font-face {
-  font-family: 'Vollkorn';
-  font-style: normal;
-  font-weight: 500;
-  src: local(''),
-       url('../fonts/Vollkorn-Medium.woff2') format('woff2'), 
-       url('../fonts/Vollkorn-Medium.woff') format('woff'); 
+       url('../fonts/vollkorn-regular.woff2') format('woff2'), 
+       url('../fonts/vollkorn-regular.woff') format('woff'); 
 }
 
 /* vollkorn-700 - latin */
@@ -56,18 +46,8 @@ figcaption {
   font-style: normal;
   font-weight: 700;
   src: local(''),
-       url('../fonts/Vollkorn-SemiBold.woff2') format('woff2'), 
-       url('../fonts/Vollkorn-SemiBold.woff') format('woff'); 
-}
-
-/* vollkorn-900 - latin */
-@font-face {
-  font-family: 'Vollkorn';
-  font-style: normal;
-  font-weight: 900;
-  src: local(''),
-       url('../fonts/Vollkorn-Bold.woff2') format('woff2'), 
-       url('../fonts/Vollkorn-Bold.woff') format('woff'); 
+       url('../fonts/vollkorn-semibold.woff2') format('woff2'), 
+       url('../fonts/vollkorn-semibold.woff') format('woff'); 
 }
 
 /* vollkorn-italic - latin */
@@ -76,36 +56,16 @@ figcaption {
   font-style: italic;
   font-weight: 400;
   src: local(''),
-       url('../fonts/Vollkorn-Italic.woff2') format('woff2'), 
-       url('../fonts/Vollkorn-Italic.woff') format('woff'); 
-}
-
-/* vollkorn-500italic - latin */
-@font-face {
-  font-family: 'Vollkorn';
-  font-style: italic;
-  font-weight: 500;
-  src: local(''),
-       url('../fonts/Vollkorn-MediumItalic.woff2') format('woff2'), 
-       url('../fonts/Vollkorn-MediumItalic.woff') format('woff'); 
-}
-
-/* vollkorn-600italic - latin */
-@font-face {
-  font-family: 'Vollkorn';
-  font-style: italic;
-  font-weight: 700;
-  src: local(''),
-       url('../fonts/Vollkorn-SemiBoldItalic.woff2') format('woff2'), 
-       url('../fonts/Vollkorn-SemiBoldItalic.woff') format('woff'); 
+       url('../fonts/vollkorn-italic.woff2') format('woff2'), 
+       url('../fonts/vollkorn-italic.woff') format('woff'); 
 }
 
 /* vollkorn-700italic - latin */
 @font-face {
   font-family: 'Vollkorn';
   font-style: italic;
-  font-weight: 900;
+  font-weight: 700;
   src: local(''),
-       url('../fonts/Vollkorn-BoldItalic.woff2') format('woff2'), 
-       url('../fonts/Vollkorn-BoldItalic.woff') format('woff'); 
+       url('../fonts/vollkorn-semibolditalic.woff2') format('woff2'), 
+       url('../fonts/vollkorn-semibolditalic.woff') format('woff'); 
 }
