--- a/content/1_projects/1_essay-on-the-modifications-of-clouds/document.css
+++ b/content/1_projects/1_essay-on-the-modifications-of-clouds/document.css
@@ -35,7 +35,7 @@ figcaption {
   font-family: 'Vollkorn';
   font-style: normal;
 	font-weight: 400;
-  src: local(''),
+  src: local('vollkorn-regular'),
        url('../fonts/vollkorn-regular.woff2') format('woff2'), 
        url('../fonts/vollkorn-regular.woff') format('woff'); 
 }
@@ -45,7 +45,7 @@ figcaption {
   font-family: 'Vollkorn';
   font-style: normal;
   font-weight: 700;
-  src: local(''),
+  src: local('vollkorn-semibold'),
        url('../fonts/vollkorn-semibold.woff2') format('woff2'), 
        url('../fonts/vollkorn-semibold.woff') format('woff'); 
 }
@@ -55,7 +55,7 @@ figcaption {
   font-family: 'Vollkorn';
   font-style: italic;
   font-weight: 400;
-  src: local(''),
+  src: local('vollkorn-italic'),
        url('../fonts/vollkorn-italic.woff2') format('woff2'), 
        url('../fonts/vollkorn-italic.woff') format('woff'); 
 }
@@ -65,7 +65,7 @@ figcaption {
   font-family: 'Vollkorn';
   font-style: italic;
   font-weight: 700;
-  src: local(''),
+  src: local('vollkorn-semibolditalic'),
        url('../fonts/vollkorn-semibolditalic.woff2') format('woff2'), 
        url('../fonts/vollkorn-semibolditalic.woff') format('woff'); 
 }
