--- a/site/plugins/epub-module/index.css
+++ b/site/plugins/epub-module/index.css
@@ -1,1 +1,26 @@
 /** put your css here **/
+.k-export-button {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+  background: #fff;
+  border-radius: 1px;
+  line-height: 1.25rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
+.k-export-button span {
+  position: relative;
+}
+
+.k-export-button span:first-child {
+  width: 38px;
+  height: 38px;
+  background-color: #2b2b2b;
+  line-height: 0;
+  color: #fff;
+}
