--- a/site/plugins/epub-module/index.css
+++ b/site/plugins/epub-module/index.css
@@ -1,20 +1,9 @@
 /** put your css here **/
 .k-export-button {
-  display: flex;
-  justify-content: start;
-  align-items: center;
   width: 100%;
+  text-align: left;
   background: #fff;
-  border-radius: 1px;
-  line-height: 1.25rem;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-}
-
-.k-export-button span {
-  position: relative;
+  box-shadow: var(--box-shadow-item);
 }
 
 .k-export-button span:first-child {
@@ -23,4 +12,14 @@
   background-color: #2b2b2b;
   line-height: 0;
   color: #fff;
+}
+
+.k-export-button:focus span:first-child,
+.k-export-button:active span:first-child,
+.k-export-button:hover span:first-child {
+  background-color: #4271ae;
+}
+
+.k-export-button span:last-child {
+  margin-left: 0.5rem;
 }
