Change blueprint field names

--- a/site/plugins/epub-module/index.css
+++ b/site/plugins/epub-module/index.css
@@ -1,7 +1,7 @@
-/** put your css here **/
 .k-export-button {
   width: 100%;
   text-align: left;
+  vertical-align: middle;
   background: #fff;
   box-shadow: var(--box-shadow-item);
 }
