--- a/site/plugins/epub-module/index.css
+++ b/site/plugins/epub-module/index.css
@@ -1,4 +1,4 @@
-.k-export-button {
+.k-epub-export-button {
   width: 100%;
   text-align: left;
   vertical-align: middle;
@@ -6,7 +6,7 @@
   box-shadow: var(--box-shadow-item);
 }
 
-.k-export-button span:first-child {
+.k-epub-export-button span:first-child {
   width: 38px;
   height: 38px;
   background-color: #2b2b2b;
@@ -14,12 +14,12 @@
   color: #fff;
 }
 
-.k-export-button:focus span:first-child,
-.k-export-button:active span:first-child,
-.k-export-button:hover span:first-child {
+.k-epub-export-button:focus span:first-child,
+.k-epub-export-button:active span:first-child,
+.k-epub-export-button:hover span:first-child {
   background-color: #4271ae;
 }
 
-.k-export-button span:last-child {
+.k-epub-export-button span:last-child {
   margin-left: 0.5rem;
 }
