Move custom panel style to custum field component

--- a/site/plugins/epub-module/index.css
+++ b/site/plugins/epub-module/index.css
@@ -22,4 +22,10 @@
 
 .k-epub-export-button span:last-child {
   margin-left: 0.5rem;
+}/* File fields: Table of Contents (CSS for document part) */
+.k-pages-field .k-list-item .k-list-item-text small,
+.k-pages-section .k-list-item .k-list-item-text small {
+  color: #000000;
+  background-color: #f1f1f1;
+  padding: 0 0.5rem;
 }
