--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -49,7 +49,7 @@ html {
 
 body {
 	font-family: sans-serif;
-	padding: 10%;
+	padding: 16vh 0;
 	text-align: center;
 	line-height: 1.3;
 	color: rgb(50, 50, 50);
@@ -57,6 +57,10 @@ body {
 
 h1 {
 	font-size: 5rem;
+}
+
+main h1 {
+	margin-top: 0;
 }
 
 a {
@@ -71,11 +75,8 @@ a:focus {
 #site-logo svg,
 #site-logo img {
 	width: auto;
-	height: 5rem;
-}
-
-#site-logo svg path {
-	fill: rgb(0, 0, 0);
+	height: 7rem;
+	transform: translate(115px,32px);
 }
 
 @media (prefers-color-scheme: dark) {
